Internationalizing JavaFX ButtonTypes with custom locale(s)